2002-06-02  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	setup symlinks for fvwm-root

	* fvwm-menu-headlines.1:
	* fvwm-menu-headlines.in:
	updated site database;
	added --timeout

2002-05-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwmrc_convert.1:
	fixed typos in the man page

2002-02-07  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	use $FVWM_BUGADDR if set when installing fvwmbug script

2002-01-30  Mikhael Goikhman  <migo@homemail.com>

	* fvwm24_convert.in:
	* Makefile.am:
	use the same generation as for other perl scripts

2001-11-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm24_convert:
	Print an error message if source file is not writable

2001-10-13  olicha  <olivier.chapuis@free.fr>

	* fvwm-menu-desktop.in:
	One or two fixes

2001-10-09  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-headlines.in:
	improved support for linuxfr.org, added thinkgeek.com

	* make_fvwmdist.sh:
	s/autormake/automake/

2001-09-05  olicha  <olivier.chapuis@free.fr>

	* fvwm-menu-headlines.in:
	* fvwm-menu-headlines.1:
	Added linuxfr.org and fix a man page misprint

2001-08-25  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-directory.in:
	* fvwm-menu-directory.1:
	fixed several kinds of escaping in menu names, menu items and shell
	commands

2001-08-15  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-config.in:
	* fvwm-config.1:
	s/gnome-wm/gnome-hints/

2001-07-30  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-headlines.in:
	improved xml parsing, added support for newsforge.com, kuro5hin.org,
	bbspot.com

2001-07-25  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-headlines.in:
	* fvwm-menu-headlines.1:
	several improvements and enhancements: better comply with HTTP/1.1,
	so AppWatch does not freeze the script and --buggyproxy is not needed,
	fixed FreshMeat time format (they changed it), show network errors
	in the menu with a possibility to reload when network returns instead