@@ -1,5 +1,5 @@
 .\" Automatically generated by Pod::Man version 1.02
-.\" Sun Jun  2 23:40:01 2002
+.\" Sun Jun  9 23:49:21 2002
 .\"
 .\" Standard preamble:
 .\" ======================================================================
@@ -138,7 +138,7 @@
 .\" ======================================================================
 .\"
 .IX Title "FVWM-MENU-HEADLINES 1"
-.TH FVWM-MENU-HEADLINES 1 "perl v5.6.0" "2002-06-02" "FVWM Utilities"
+.TH FVWM-MENU-HEADLINES 1 "perl v5.6.0" "2002-06-09" "FVWM Utilities"
 .UC
 .SH "NAME"
 fvwm-menu-headlines \- builds headlines menu definition for \s-1FVWM\s0
@@ -157,6 +157,7 @@ fvwm-menu-headlines \- builds headlines menu definition for \s-1FVWM\s0
 [ \fB\*(--icon-title\fR icon ]
 [ \fB\*(--icon-item\fR icon ]
 [ \fB\*(--icon-home\fR icon ]
+[ \fB\*(--icon-error\fR icon ]
 [ \fB\*(--wm-icons\fR ]
 [ \fB\*(--frontpage\fR [where] ]
 [ \fB\*(--proxy\fR|\fB\-p\fR host:port ]
@@ -186,10 +187,9 @@ otherwise print all site names
 also can be used together with \-\-help to get new defaults.
 Default site: freshmeat.
 .PP
-\&\fB\*(--name\fR, \fB\*(--title\fR, \fB\*(--icon\fR \- define menu name, menu title and menu icon
-accordingly given in the following argument. Default is name
-\&\*(L"MenuHeadlinesFreshmeat\*(R", title \*(L"Freshmeat Headlines\*(R" and no mini-icon
-(equivalent to an empty icon argument).
+\&\fB\*(--name\fR, \fB\*(--title\fR \- define menu name and menu title accordingly given
+in the following argument. Default is name \*(L"MenuHeadlinesFreshmeat\*(R" and
+title \*(L"Freshmeat Headlines\*(R".
 .PP
 \&\fB\*(--item\fR, \fB\*(--exec\fR \- define menu item or exec format in the following
 argument (what is shown and what is executed when the item is chosen),
@@ -220,13 +220,14 @@ for example, \*(L"Function FuncFvwmShowURL '%u'\*(R" not only Exec.
 In fact, \-\-exec=\*(L"mozilla '%u'\*(R" is equivalent
 to \-\-command=\*(L"Exec mozilla '%u'\*(R"
 .PP
-\&\fB\*(--icon-title\fR, \fB\*(--icon-item\fR, \fB\*(--icon-home\fR \- define menu icon for
-title, regular item and home item respectively given in the following argument.
+\&\fB\*(--icon-title\fR, \fB\*(--icon-item\fR, \fB\*(--icon-home\fR, \fB\*(--icon-error\fR \- define
+menu icon for title, regular item, frontpage item and error item respectively
+given in the following argument.
 Default is no menu icons (equivalent to an empty icon argument).
 .PP
 \&\fB\*(--wm-icons\fR \- define icon names suitable for use with wm-icons package.
 Currently this is equivalent to: \-\-icon-title '' \-\-icon-item
-menu/information.xpm \-\-icon-home menu/home.xpm.
+menu/information.xpm \-\-icon-home menu/home.xpm \-\-icon-error menu/choice-no.xpm.
 .PP
 \&\fB\*(--frontpage\fR [where] \- show site fronpage item in the menu too. Optional
 value can be used to specify where this item will be placed in the menu \-
@@ -252,7 +253,7 @@ the default timeout is 20 seconds.
 \&\s-1WORK_HOME\s0 of this script is ~/.fvwm/.fvwm-menu-headlines.
 It is created if needed.
 .PP
-Option parameters can be specified both using '=' and in the next argument.
+Option parameters can be specified either using '=' or in the next argument.
 Short options are ok if not ambiguous: \f(CW\*(C`\-h\*(C'\fR, \f(CW\*(C`\-t\*(C'\fR; but be careful with
 short options, what is now unambiguous, can become ambiguous in the next
 versions.
