@@ -1,3 +1,9 @@
+2002-06-09  Mikhael Goikhman  <migo@homemail.com>
+
+	* fvwm-menu-headlines.1:
+	* fvwm-menu-headlines.in:
+	fix for a bad httpd responce, new option --icon-error
+
 2002-06-02  Mikhael Goikhman  <migo@homemail.com>
 
 	* Makefile.am:
